# clippy

./: .aiignore  .dir2md.json  .gitignore  AGENTS.md  Makefile  PREVIEW_DOC.md  README.md  build-sidecar.sh  create-release.sh  figma-decoder.js  figma.html  generate-icons.js  icon.sketch  index.html  justfile  package-lock.json  package.json  test_clipboard.js  test_hash.rs
.github/workflows/: deploy.yml
assets/: index-DvC05U_l.css
figma-export/: analysis.json  buffer.hex  metadata.json
frontend/: AGENTS.md  README.md  index.html  vite.config.js
frontend/scripts/: AGENTS.md  build-cli-examples.sh  build-cli-examples.ts  build-demo-items.sh  interactive-output.txt
frontend/src/: AGENTS.md  App.vue  style.css
frontend/src/components/: AGENTS.md  CliDemo.vue  ClipboardDemo.vue  ClipboardItem.vue  DashboardSection.vue  FooterSection.vue  HeroSection.vue  PreviewWindow.vue  ScreenshotGallery.vue  TerminalDisplay.vue
frontend/src/data/: cli-examples.json  demo-items.json  demo-previews.json  interactive.txt
frontend/src/data/previews/: preview_0.html  preview_1.html  preview_2.html  preview_3.html  preview_4.html  preview_5.html  preview_6.html  preview_7.html  preview_null.html
get_clipboard/: AGENTS.md  API.md  Cargo.toml  DEPLOYMENT.md  FRONTEND.md  PERFORMANCE.md  README.md  build-frontend.sh  dashboard.html  justfile  serialize-dom.js
get_clipboard/frontend-app/: AGENTS.md  README.md  freshness_test.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
get_clipboard/frontend-app/src/: AGENTS.md  App.vue
get_clipboard/frontend-app/src/components/: AGENTS.md  ImportModal.vue  ItemDetail.vue  ItemList.vue  SettingsModal.vue  Sidebar.vue  StatsModal.vue  ToastContainer.vue  TopBar.vue
get_clipboard/frontend-app/src/composables/: AGENTS.md  useClipboard.js
get_clipboard/frontend-dist/: index.html
get_clipboard/frontend-dist/assets/: index-7ajkYr4j.js  index-8QSuu-_a.js  index-Ch6NqX3T.js  index-Cnxq5IV4.css  index-DGNHNVwy.css  index-NflhZLG_.css
get_clipboard/src/: AGENTS.md  lib.rs  main.rs  website_fetcher.rs
get_clipboard/src/api/: AGENTS.md  mod.rs
get_clipboard/src/cli/: AGENTS.md  args.rs  handlers.rs  handlers.rs.bak  mod.rs
get_clipboard/src/clipboard/: AGENTS.md  mac.rs  mod.rs  plugins.rs  snapshot.rs
get_clipboard/src/clipboard/plugins/: AGENTS.md  README.md  files.rs  html.rs  image.rs  mod.rs  rtf.rs  text.rs
get_clipboard/src/config/: AGENTS.md  io.rs  mod.rs  model.rs
get_clipboard/src/data/: AGENTS.md  mod.rs  model.rs  store.rs
get_clipboard/src/fs/: AGENTS.md  layout.rs  mod.rs
get_clipboard/src/index/: search.rs
get_clipboard/src/search/: AGENTS.md  mod.rs
get_clipboard/src/service/: AGENTS.md  launchd.rs  linux.rs  macos.rs  mod.rs  permissions.rs  unsupported.rs  watch.rs  windows.rs
get_clipboard/src/tui/: AGENTS.md  app.rs  mod.rs  state.rs  view.rs
get_clipboard/src/util/: AGENTS.md  hash.rs  mod.rs  paste.rs  time.rs
get_clipboard/templates/: AGENTS.md  base_iframe.js  base_parent.js  file.hbs  file.html  files.hbs  html.hbs  html.html  image.hbs  image.html  rtf.hbs  style.css  text.hbs  text.html
src/: AGENTS.md  App.vue  main.js  router.js
src-tauri/: AGENTS.md  Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: AGENTS.md  accessibility.rs  api.rs  clipboard.rs  db.rs  lib.rs  paste.rs  polling.rs  preview.rs  settings.rs  shortcut.rs  sidecar.rs  structs.rs  tray.rs  visibility.rs  windows.rs
src/components/: AGENTS.md  AccentColorPicker.vue  ClipboardItem.vue  ClipboardManager.vue  InlinePreview.vue  PreviewFooter.vue  PreviewPane.vue  PreviewWindow.vue  Settings.vue  ShortcutRecorder.vue  Welcome.vue
src/composables/: AGENTS.md  index.js  useClipboardActions.js  useClipboardItems.js  useClipboardPreview.js  useCyclingMode.js  useKeyboardHandling.js  useListSelection.js  usePreviewLoader.js  useTauriEvent.js  useWindowFocus.js
src/utils/: AGENTS.md  itemShortcuts.js  ui.js
