[package]
name = "get_clipboard"
version = "0.1.0"
edition = "2024"
default-run = "get_clipboard"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
sha2 = "0.10"
base64 = "0.22"
directories = "5.0"
parking_lot = "0.12"
ratatui = { version = "0.26", default-features = false, features = ["crossterm"] }
crossterm = "0.27"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSPasteboard"] }
objc2-foundation = { version = "0.3", features = ["NSArray", "NSData", "NSString"] }
time = { version = "0.3", features = ["macros", "serde", "formatting", "parsing"] }
color-eyre = "0.6"
once_cell = "1.19"
hex = "0.4.3"
image = "0.25"
mime_guess = "2.0"
clipboard-rs = "0.3"
url = "2.5"
viuer = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
axum = { version = "0.7", features = ["json"] }
tempfile = "3.10"
include_dir = "0.7"
objc2-core-graphics = { version = "0.3.2", features = ["CGEvent", "CGEventSource", "CGEventTypes"] }

[[bin]]
name = "test_paste"
path = "src/bin/test_paste.rs"

[[bin]]
name = "get_clipboard"
path = "src/main.rs"
