[package]
name = "clippy"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "clippy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clipboard-rs = "0.3.0"
base64 = "0.22"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
window-vibrancy = "0.6.0"
sha2 = "0.10"
hex = "0.4"
md5 = "0.7"
tokio = { version = "1", features = ["time"] }
tauri-plugin-shell = "2.3.3"
reqwest = { version = "0.12.24", features = ["json", "blocking"] }
urlencoding = "2.1.3"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24"
objc = "0.2.7"
objc2-core-graphics = { version = "0.3", features = ["CGEvent"] }
objc2-foundation = { version = "0.2", features = ["NSGeometry"] }
tauri-plugin-macos-permissions = "2.3.0"
