[package]
name = "clippy"
version = "0.1.8"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "clippy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
anyhow = "1.0"
window-vibrancy = "0.6.0"
tokio = { version = "1", features = ["time"] }
tauri-plugin-shell = "2.3.3"
reqwest = { version = "0.12.24", features = ["json", "blocking"] }
urlencoding = "2.1.3"
tauri-plugin-opener = "2"
tauri-plugin-store = "2"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-core-graphics = { version = "0.3", features = ["CGEvent"] }
tauri-plugin-macos-permissions = "2.3.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"
